finished module 6 and 7